--- a/package.json
+++ b/package.json
@@ -9,7 +9,11 @@
   "dependencies": {
     "react": "16.0.0-alpha.12",
     "react-native": "0.48.2",
-    "react-navigation": "^1.0.0-beta.11"
+    "react-native-elements": "^0.16.0",
+    "react-native-vector-icons": "^4.3.0",
+    "react-navigation": "^1.0.0-beta.11",
+    "react-redux": "^5.0.6",
+    "redux": "^3.7.2"
   },
   "devDependencies": {
     "babel-jest": "21.0.2",
