--- a/package.json
+++ b/package.json
@@ -1,28 +1,31 @@
 {
-    "name": "OrderlyNative",
-    "version": "0.0.1",
-    "private": true,
-    "scripts": {
-        "start": "node node_modules/react-native/local-cli/cli.js start --reset-cache",
-        "test": "jest"
-    },
-    "dependencies": {
-        "react": "16.0.0-alpha.12",
-        "react-native": "0.48.2",
-        "react-native-elements": "^0.16.0",
-        "react-native-icons": "^0.7.1",
-        "react-native-vector-icons": "^4.3.0",
-        "react-navigation": "^1.0.0-beta.11",
-        "react-redux": "^5.0.6",
-        "redux": "^3.7.2"
-    },
-    "devDependencies": {
-        "babel-jest": "21.0.2",
-        "babel-preset-react-native": "3.0.2",
-        "jest": "21.0.2",
-        "react-test-renderer": "16.0.0-alpha.12"
-    },
-    "jest": {
-        "preset": "react-native"
-    }
+  "name": "OrderlyNative",
+  "version": "0.0.1",
+  "private": true,
+  "scripts": {
+    "start": "node node_modules/react-native/local-cli/cli.js start --reset-cache",
+    "test": "jest"
+  },
+  "dependencies": {
+    "axios": "^0.16.2",
+    "ramda": "^0.24.1",
+    "react": "16.0.0-alpha.12",
+    "react-native": "0.48.2",
+    "react-native-elements": "^0.16.0",
+    "react-native-icons": "^0.7.1",
+    "react-native-vector-icons": "^4.3.0",
+    "react-navigation": "^1.0.0-beta.11",
+    "react-redux": "^5.0.6",
+    "redux": "^3.7.2",
+    "redux-saga": "^0.15.6"
+  },
+  "devDependencies": {
+    "babel-jest": "21.0.2",
+    "babel-preset-react-native": "3.0.2",
+    "jest": "21.0.2",
+    "react-test-renderer": "16.0.0-alpha.12"
+  },
+  "jest": {
+    "preset": "react-native"
+  }
 }
