--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-native": "0.48.2",
     "react-native-elements": "^0.16.0",
     "react-native-icons": "^0.7.1",
+    "react-native-navigation": "^1.1.226",
     "react-native-vector-icons": "^4.3.0",
     "react-navigation": "^1.0.0-beta.11",
     "react-redux": "^5.0.6",
