--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react": "16.0.0-alpha.12",
     "react-native": "0.48.2",
     "react-native-elements": "^0.16.0",
+    "react-native-extended-stylesheet": "^0.6.0",
     "react-native-icons": "^0.7.1",
     "react-native-navigation": "^1.1.226",
     "react-native-vector-icons": "^4.3.0",
