--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "ramda": "^0.24.1",
     "react": "16.0.0-alpha.12",
     "react-native": "0.48.2",
+    "react-native-action-button": "^2.8.0",
     "react-native-elements": "^0.16.0",
     "react-native-extended-stylesheet": "^0.6.0",
     "react-native-icons": "^0.7.1",
