--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -31,6 +31,7 @@
         "arrow-parens": ["error", "always"],
         "no-confusing-arrow": ["error", { "allowParens": false }],
         "no-constant-condition": "error",
+        "no-case-declarations": "off",
         "no-labels": "error",
         "no-multiple-empty-lines": ["error", { "max": 1, "maxEOF": 1 }],
         "func-style": "off",
