--- a/package.json
+++ b/package.json
@@ -8,13 +8,18 @@
   },
   "dependencies": {
     "axios": "^0.16.2",
+    "prop-types": "^15.5.10",
     "ramda": "^0.24.1",
     "react": "16.0.0-alpha.12",
+    "react-file-input": "^0.2.5",
     "react-native": "0.48.2",
+    "react-native-datepicker-dialog": "0.0.6",
+    "react-native-drawer": "^2.5.0",
     "react-native-elements": "^0.16.0",
     "react-native-icons": "^0.7.1",
+    "react-native-image-picker": "^0.26.7",
     "react-native-prompt": "^1.0.0",
-    "react-native-vector-icons": "^4.3.0",
+    "react-native-vector-icons": "^4.4.0",
     "react-navigation": "^1.0.0-beta.11",
     "react-redux": "^5.0.6",
     "redux": "^3.7.2",
